# otel-example

./: Cargo.toml  docker-compose.yaml
deployment/: docker-compose.yaml  otel.yaml
src/: error.rs  main.rs  telemetry.rs
