[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

opentelemetry = { version = "0.27.1", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27.1", features = ["metrics", "trace", "logs", "rt-tokio", "tracing", "async-trait"] }
opentelemetry-semantic-conventions = {version = "0.27.0", features = ["default", "semconv_experimental"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes", "async-await", "tracing-attributes"] }


log = "0.4.22"
telemetry-rust = { path = "../telemetry-rust" }
chrono = { version = "0.4.39", features = ["serde"] }
